Fixed overflow for pagination on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -748,4 +748,8 @@ p.result-link-description {
     p.result-link-url {
         overflow: hidden;
     }
+
+    .pg-number {
+        display: none !important;
+    }
 }
